--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:pino": "tsx watch --clear-screen=false src/server.ts | pino-pretty",
+    "dev:pino": "tsx watch --clear-screen=false src/server.ts",
     "start": "node ./dist/server.js",
     "build": "rimraf ./dist && tsc && tsc-alias",
     "test": "dotenvx run -f .env.test -- vitest run --reporter=verbose",
@@ -20,48 +20,48 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/amqplib": "^0.10.5",
+    "@eslint/js": "^9.16.0",
+    "@types/amqplib": "^0.10.6",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.8.1",
-    "@types/nodemailer": "^6.4.16",
+    "@types/node": "^22.10.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.12",
-    "@vitest/eslint-plugin": "^1.1.7",
+    "@vitest/eslint-plugin": "^1.1.16",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-sonarjs": "^2.0.4",
-    "prettier": "^3.3.3",
+    "eslint-plugin-sonarjs": "^3.0.1",
+    "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
-    "testcontainers": "^10.13.2",
+    "testcontainers": "^10.16.0",
     "tsc-alias": "^1.8.10",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.1.3"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.0",
+    "vite": "^6.0.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.21.0",
-    "@faker-js/faker": "^9.1.0",
-    "@hono/node-server": "^1.13.3",
-    "amqplib": "^0.10.4",
+    "@dotenvx/dotenvx": "^1.29.0",
+    "@faker-js/faker": "^9.3.0",
+    "@hono/node-server": "^1.13.7",
+    "amqplib": "^0.10.5",
     "bcrypt": "^5.1.1",
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
-    "eslint-plugin-unicorn": "^56.0.0",
-    "hono": "^4.6.7",
+    "eslint-plugin-unicorn": "^56.0.1",
+    "hono": "^4.6.13",
     "ioredis": "^5.4.1",
-    "jsx-email": "^1.12.1",
-    "kysely": "^0.27.4",
+    "jsx-email": "^2.5.3",
+    "kysely": "^0.27.5",
     "kysely-ctl": "^0.9.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.11.5",
     "nodemailer": "^6.9.16",
     "pino": "^9.5.0",
     "react": "^18.3.1",
     "tsx": "^4.19.2",
     "znv": "0.4.0",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   }
 }
