--- a/.env.test
+++ b/.env.test
@@ -10,10 +10,10 @@ APP_URL=http://localhost
 FRONTEND_URL=http://localhost:3000
 
 DB_HOST=localhost
-DB_USER=user
-DB_PORT=3309
+DB_PORT=3306
+DB_USER=root
 DB_PASSWORD=password
-DB_NAME=starterdb
+DB_NAME=start_hr_test
 
 REDIS_HOST=redis
 REDIS_PASSWORD=
@@ -30,6 +30,3 @@ MAIL_USERNAME=54e318bc5d0918
 MAIL_PASSWORD=b5c503d4fecda0
 MAIL_FROM_NAME=myapp
 MAIL_FROM_ADDRESS=myapp@example.com
-
-TEST_CONTAINER=true
-
