--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --clear-screen=false src/server.ts",
+    "dev": "tsx watch --clear-screen=false src/server.ts | pino-pretty",
     "start": "node ./dist/server.js",
     "build": "rimraf ./dist && tsc && tsc-alias",
     "test": "dotenvx run -f .env.test -- vitest run --reporter=verbose",
@@ -59,6 +59,7 @@
     "mysql2": "^3.12.0",
     "nodemailer": "^6.9.16",
     "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "react": "^18.3.1",
     "tsx": "^4.19.2",
     "znv": "0.4.0",
