--- a/package.json
+++ b/package.json
@@ -13,54 +13,41 @@
     "lint:fix": "eslint ./src --fix",
     "format:all": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|jsx|tsx)\"",
     "format:check": "prettier --ignore-path .gitignore --check \"**/*.+(js|ts|jsx|tsx)\"",
-    "db:migrate": "kysely migrate:latest",
-    "email:preview": "email preview ./src/app"
+    "db:migrate": "kysely migrate:latest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/amqplib": "^0.10.6",
-    "@types/bcrypt": "^5.0.2",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.10.2",
-    "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18.3.12",
-    "@vitest/eslint-plugin": "^1.1.20",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-sonarjs": "^3.0.1",
-    "prettier": "^3.4.2",
+    "@eslint/js": "^9.34.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/node": "^24.3.0",
+    "@vitest/eslint-plugin": "^1.3.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
-    "testcontainers": "^10.16.0",
-    "tsc-alias": "^1.8.10",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.2",
+    "testcontainers": "^11.5.1",
+    "tsc-alias": "^1.8.16",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^2.1.8"
+    "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.31.3",
+    "@dotenvx/dotenvx": "^1.49.0",
     "@faker-js/faker": "^9.3.0",
-    "@hono/node-server": "^1.13.7",
-    "amqplib": "^0.10.5",
-    "bcrypt": "^5.1.1",
-    "commander": "^12.1.0",
-    "cors": "^2.8.5",
-    "dayjs": "^1.11.13",
-    "eslint-plugin-unicorn": "^56.0.1",
-    "hono": "^4.6.14",
-    "ioredis": "^5.4.2",
-    "jsx-email": "^2.5.4",
-    "kysely": "^0.27.5",
-    "kysely-ctl": "^0.10.1",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.12.0",
-    "nodemailer": "^6.9.16",
-    "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0",
-    "react": "^18.3.1",
-    "tsx": "^4.19.2",
+    "@hono/node-server": "^1.19.0",
+    "bcrypt": "^6.0.0",
+    "commander": "^14.0.0",
+    "eslint-plugin-unicorn": "^60.0.0",
+    "hono": "^4.9.4",
+    "kysely": "^0.28.5",
+    "kysely-ctl": "^0.17.0",
+    "mysql2": "^3.14.3",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
+    "tsx": "^4.20.5",
     "znv": "0.4.0",
     "zod": "^3.24.1"
   }
