--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "otel": "node --env-file .env --import ./dist/instrumentation.js ./dist/server.js",
     "dev": "tsx watch --clear-screen=false src/server.ts | pino-pretty",
     "start": "node ./dist/server.js",
     "build": "rimraf ./dist && tsc && tsc-alias",
@@ -38,6 +39,22 @@
     "@dotenvx/dotenvx": "^1.49.0",
     "@faker-js/faker": "^9.3.0",
     "@hono/node-server": "^1.19.0",
+    "@hono/otel": "^0.5.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.62.1",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+    "@opentelemetry/instrumentation-http": "^0.203.0",
+    "@opentelemetry/instrumentation-mysql2": "^0.50.0",
+    "@opentelemetry/instrumentation-pino": "^0.50.0",
+    "@opentelemetry/instrumentation-winston": "^0.48.1",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-logs": "^0.203.0",
+    "@opentelemetry/sdk-metrics": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.203.0",
+    "@opentelemetry/semantic-conventions": "^1.36.0",
+    "@opentelemetry/winston-transport": "^0.14.1",
     "bcrypt": "^6.0.0",
     "commander": "^14.0.0",
     "eslint-plugin-unicorn": "^60.0.0",
@@ -46,8 +63,10 @@
     "kysely-ctl": "^0.17.0",
     "mysql2": "^3.14.3",
     "pino": "^9.9.0",
+    "pino-opentelemetry-transport": "^1.0.1",
     "pino-pretty": "^13.1.1",
     "tsx": "^4.20.5",
+    "winston": "^3.17.0",
     "znv": "0.4.0",
     "zod": "^3.24.1"
   }
