--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "otel": "node --env-file .env --import ./dist/instrumentation.js ./dist/server.js",
-    "dev": "tsx watch --clear-screen=false src/server.ts | pino-pretty",
+    "otel": "node --env-file .env --import ./dist/otel.js --experimental-loader=@opentelemetry/instrumentation/hook.mjs --watch ./dist/server.js",
+    "dev": "tsx --env-file .env --watch src/server.ts | pino-pretty",
     "start": "node ./dist/server.js",
     "build": "rimraf ./dist && tsc && tsc-alias",
     "test": "dotenvx run -f .env.test -- vitest run --reporter=verbose",
@@ -21,8 +21,9 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "@trigger.dev/build": "^4.0.2",
     "@types/bcrypt": "^6.0.0",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.3.1",
     "@vitest/eslint-plugin": "^1.3.4",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-sonarjs": "^3.0.5",
@@ -31,43 +32,44 @@
     "testcontainers": "^11.5.1",
     "tsc-alias": "^1.8.16",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.41.0",
+    "typescript-eslint": "^8.42.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.49.0",
     "@faker-js/faker": "^9.3.0",
-    "@hono/node-server": "^1.19.0",
+    "@hono/node-server": "^1.19.1",
     "@hono/otel": "^0.5.0",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.62.1",
-    "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
-    "@opentelemetry/instrumentation-http": "^0.203.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.62.2",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.204.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.204.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.204.0",
+    "@opentelemetry/instrumentation-http": "^0.204.0",
     "@opentelemetry/instrumentation-mysql2": "^0.50.0",
-    "@opentelemetry/instrumentation-pino": "^0.50.0",
+    "@opentelemetry/instrumentation-pino": "^0.50.1",
     "@opentelemetry/instrumentation-winston": "^0.48.1",
-    "@opentelemetry/resources": "^2.0.1",
-    "@opentelemetry/sdk-logs": "^0.203.0",
-    "@opentelemetry/sdk-metrics": "^2.0.1",
-    "@opentelemetry/sdk-node": "^0.203.0",
-    "@opentelemetry/semantic-conventions": "^1.36.0",
+    "@opentelemetry/resources": "^2.1.0",
+    "@opentelemetry/sdk-logs": "^0.204.0",
+    "@opentelemetry/sdk-metrics": "^2.1.0",
+    "@opentelemetry/sdk-node": "^0.204.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
     "@opentelemetry/winston-transport": "^0.14.1",
+    "@trigger.dev/sdk": "^4.0.2",
     "bcrypt": "^6.0.0",
     "commander": "^14.0.0",
     "eslint-plugin-unicorn": "^60.0.0",
-    "hono": "^4.9.4",
+    "hono": "^4.9.6",
     "kysely": "^0.28.5",
-    "kysely-ctl": "^0.17.0",
-    "mysql2": "^3.14.3",
-    "pino": "^9.9.0",
+    "kysely-ctl": "^0.18.0",
+    "mysql2": "^3.14.4",
+    "pino": "^9.9.2",
     "pino-opentelemetry-transport": "^1.0.1",
     "pino-pretty": "^13.1.1",
     "tsx": "^4.20.5",
     "winston": "^3.17.0",
-    "znv": "0.4.0",
+    "znv": "0.5.0",
     "zod": "^3.24.1"
   }
 }
