--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,9 @@
       "@/*": ["*"]
     }
   },
-  "include": ["src/**/*", "src/types/index.d.ts", "src/types/vitest.d.ts"]
+  "include": [
+    "src/**/*",
+    "src/types/index.d.ts",
+    "src/types/vitest.d.ts"
+  ]
 }
