--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "otel": "node --env-file .env --import ./dist/otel.js ./dist/server.js",
     "dev": "tsx --env-file .env --watch src/server.ts | pino-pretty",
-    "start": "node ./dist/server.js",
+    "start": "node --env-file .env ./dist/server.js",
+    "start:otel": "node --env-file .env --import ./dist/otel.js ./dist/server.js",
     "build": "rimraf ./dist && tsc && tsc-alias",
     "test": "dotenvx run -f .env.test -- vitest run --reporter=verbose",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "format:all": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|jsx|tsx)\"",
     "format:check": "prettier --ignore-path .gitignore --check \"**/*.+(js|ts|jsx|tsx)\"",
-    "db:migrate": "kysely migrate:latest"
+    "db:migrate": "kysely migrate:latest",
+    "db:codegen": "kysely-codegen --out-file ./src/common/database/types.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,8 @@
     "@vitest/eslint-plugin": "^1.3.4",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-sonarjs": "^3.0.5",
+    "kysely-codegen": "^0.19.0",
+    "kysely-ctl": "^0.19.0",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
     "testcontainers": "^11.5.1",
@@ -56,11 +59,11 @@
     "@opentelemetry/semantic-conventions": "^1.37.0",
     "@opentelemetry/winston-transport": "^0.14.1",
     "bcrypt": "^6.0.0",
+    "better-auth": "^1.3.8",
     "commander": "^14.0.0",
     "eslint-plugin-unicorn": "^60.0.0",
     "hono": "^4.9.6",
     "kysely": "^0.28.5",
-    "kysely-ctl": "^0.18.0",
     "mysql2": "^3.14.4",
     "pino": "^9.9.2",
     "pino-opentelemetry-transport": "^1.0.1",
