--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@opentelemetry/sdk-node": "^0.204.0",
     "@opentelemetry/semantic-conventions": "^1.37.0",
     "@opentelemetry/winston-transport": "^0.14.1",
+    "@t3-oss/env-core": "^0.13.8",
     "bcrypt": "^6.0.0",
     "better-auth": "^1.3.8",
     "commander": "^14.0.0",
@@ -71,7 +72,6 @@
     "pino-pretty": "^13.1.1",
     "tsx": "^4.20.5",
     "winston": "^3.17.0",
-    "znv": "0.5.0",
-    "zod": "^3.24.1"
+    "zod": "^4.1.5"
   }
 }
