--- a/package.json
+++ b/package.json
@@ -22,56 +22,57 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.34.0",
-    "@types/bcrypt": "^6.0.0",
-    "@types/node": "^24.3.1",
-    "@vitest/eslint-plugin": "^1.3.4",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-sonarjs": "^3.0.5",
-    "kysely-codegen": "^0.19.0",
-    "kysely-ctl": "^0.19.0",
-    "prettier": "^3.6.2",
-    "rimraf": "^6.0.1",
-    "testcontainers": "^11.5.1",
-    "tsc-alias": "^1.8.16",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.42.0",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4"
+    "@eslint/js": "9.34.0",
+    "@types/bcrypt": "6.0.0",
+    "@types/node": "24.3.1",
+    "@vitest/eslint-plugin": "1.3.4",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-sonarjs": "3.0.5",
+    "kysely-codegen": "0.19.0",
+    "kysely-ctl": "0.19.0",
+    "prettier": "3.6.2",
+    "rimraf": "6.0.1",
+    "testcontainers": "11.5.1",
+    "tsc-alias": "1.8.16",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.42.0",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.2.4"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^1.49.0",
-    "@faker-js/faker": "^9.3.0",
-    "@hono/node-server": "^1.19.1",
-    "@hono/otel": "^0.5.0",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.62.2",
-    "@opentelemetry/exporter-logs-otlp-http": "^0.204.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.204.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.204.0",
-    "@opentelemetry/instrumentation-http": "^0.204.0",
-    "@opentelemetry/instrumentation-mysql2": "^0.50.0",
-    "@opentelemetry/instrumentation-pino": "^0.50.1",
-    "@opentelemetry/instrumentation-winston": "^0.48.1",
-    "@opentelemetry/resources": "^2.1.0",
-    "@opentelemetry/sdk-logs": "^0.204.0",
-    "@opentelemetry/sdk-metrics": "^2.1.0",
-    "@opentelemetry/sdk-node": "^0.204.0",
-    "@opentelemetry/semantic-conventions": "^1.37.0",
-    "@opentelemetry/winston-transport": "^0.14.1",
-    "@t3-oss/env-core": "^0.13.8",
-    "bcrypt": "^6.0.0",
-    "better-auth": "^1.3.8",
-    "commander": "^14.0.0",
-    "eslint-plugin-unicorn": "^60.0.0",
-    "hono": "^4.9.6",
-    "kysely": "^0.28.5",
-    "mysql2": "^3.14.4",
-    "pino": "^9.9.2",
-    "pino-opentelemetry-transport": "^1.0.1",
-    "pino-pretty": "^13.1.1",
-    "tsx": "^4.20.5",
-    "winston": "^3.17.0",
-    "zod": "^4.1.5"
+    "@dotenvx/dotenvx": "1.49.0",
+    "@faker-js/faker": "9.3.0",
+    "@hono/node-server": "1.19.1",
+    "@hono/otel": "0.5.0",
+    "@hono/zod-validator": "0.7.2",
+    "@opentelemetry/api": "1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "0.62.2",
+    "@opentelemetry/exporter-logs-otlp-http": "0.204.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "0.204.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.204.0",
+    "@opentelemetry/instrumentation-http": "0.204.0",
+    "@opentelemetry/instrumentation-mysql2": "0.50.0",
+    "@opentelemetry/instrumentation-pino": "0.50.1",
+    "@opentelemetry/instrumentation-winston": "0.48.1",
+    "@opentelemetry/resources": "2.1.0",
+    "@opentelemetry/sdk-logs": "0.204.0",
+    "@opentelemetry/sdk-metrics": "2.1.0",
+    "@opentelemetry/sdk-node": "0.204.0",
+    "@opentelemetry/semantic-conventions": "1.37.0",
+    "@opentelemetry/winston-transport": "0.14.1",
+    "@t3-oss/env-core": "0.13.8",
+    "bcrypt": "6.0.0",
+    "better-auth": "1.3.8",
+    "commander": "14.0.0",
+    "eslint-plugin-unicorn": "60.0.0",
+    "hono": "4.9.6",
+    "kysely": "0.28.5",
+    "mysql2": "3.14.4",
+    "pino": "9.9.2",
+    "pino-opentelemetry-transport": "1.0.1",
+    "pino-pretty": "13.1.1",
+    "tsx": "4.20.5",
+    "winston": "3.17.0",
+    "zod": "4.1.5"
   }
 }
