--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "@opentelemetry/sdk-metrics": "2.1.0",
     "@opentelemetry/sdk-node": "0.204.0",
     "@opentelemetry/semantic-conventions": "1.37.0",
-    "@opentelemetry/winston-transport": "0.14.1",
     "@t3-oss/env-core": "0.13.8",
     "bcrypt": "6.0.0",
     "better-auth": "1.3.8",
@@ -69,8 +68,8 @@
     "kysely": "0.28.5",
     "mysql2": "3.14.4",
     "pino": "9.9.2",
-    "pino-opentelemetry-transport": "1.0.1",
     "pino-pretty": "13.1.1",
+    "tiny-invariant": "1.3.3",
     "tsx": "4.20.5",
     "winston": "3.17.0",
     "zod": "4.1.5"
