--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,11 @@
-NODE_ENV=production
+NODE_ENV=development
 PORT=4000
-LOG=true
 
 APP_NAME=MyApp
-APP_KEY=my-secret-key
 APP_DEBUG=true
 APP_URL=http://localhost
-
 FRONTEND_URL=http://localhost:3000
+DATABASE_URL=mysql://user:password@localhost:3306/myapp_test
 
-DB_HOST=mysql
-DB_USER=user
-DB_PORT=3306
-DB_PASSWORD=password
-DB_NAME=testdb
-
-REDIS_HOST=redis
-REDIS_PASSWORD=
-REDIS_PORT=6379
-
-RABBITMQ_HOST=rabbitmq
-RABBITMQ_PORT=5672
-RABBITMQ_USERNAME=guest
-RABBITMQ_PASSWORD=guest
-
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=54e318bc5d0918
-MAIL_PASSWORD=b5c503d4fecda0
-MAIL_FROM_NAME=myapp
-MAIL_FROM_ADDRESS=myapp@example.com
-
+BETTER_AUTH_SECRET=x7N0MKptndXrkWRMdfOrrQOg6SWaTkFp
+BETTER_AUTH_URL=http://localhost:4000
