--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node --env-file .env ./dist/server.js",
     "start:otel": "node --env-file .env --import ./dist/otel.js ./dist/server.js",
     "build": "rimraf ./dist && tsc && tsc-alias",
-    "test": "dotenvx run -f .env.test -- vitest run --reporter=verbose",
+    "test": "dotenvx run -f .env.test -q -- vitest run --reporter=verbose",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "format:all": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|jsx|tsx)\"",
@@ -27,7 +27,6 @@
     "@types/node": "24.3.1",
     "@vitest/eslint-plugin": "1.3.4",
     "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-sonarjs": "3.0.5",
     "kysely-codegen": "0.19.0",
     "kysely-ctl": "0.19.0",
     "prettier": "3.6.2",
