--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "tsx --env-file .env --watch src/server.ts | pino-pretty",
     "start": "node --env-file .env ./dist/server.js",
     "start:otel": "node --env-file .env --import ./dist/otel.js ./dist/server.js",
-    "build": "rimraf ./dist && tsc && tsc-alias",
+    "build": "tsc && tsc-alias",
     "test": "dotenvx run -f .env.test -q -- vitest run --reporter=verbose",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
@@ -16,7 +16,7 @@
     "format:check": "prettier --ignore-path .gitignore --check \"**/*.+(js|ts|jsx|tsx)\"",
     "db:migrate": "kysely migrate:latest",
     "db:migrate:auth": "npx @better-auth/cli migrate",
-    "db:codegen": "kysely-codegen --out-file ./src/lib/db/types.ts"
+    "db:codegen": "kysely-codegen --dialect mysql --out-file ./src/lib/db/types.ts"
   },
   "keywords": [],
   "author": "",
