--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bcrypt": "6.0.0",
     "@types/node": "24.3.1",
     "@vitest/eslint-plugin": "1.3.9",
+    "@vitest/ui": "^3.2.4",
     "eslint-config-prettier": "10.1.8",
     "kysely-codegen": "0.19.0",
     "kysely-ctl": "0.19.0",
