--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
     "dev": "tsx --env-file .env --watch src/server.ts | pino-pretty",
     "start": "node --env-file .env ./dist/server.js",
     "start:otel": "node --env-file .env --import ./dist/otel.js ./dist/server.js",
-    "build": "tsc && tsc-alias",
+    "build": "rimraf dist && tsc && tsc-alias",
     "test": "dotenvx run -f .env.test -q -- vitest run --reporter=verbose",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
@@ -23,7 +23,6 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "9.35.0",
-    "@types/bcrypt": "6.0.0",
     "@types/node": "24.3.1",
     "@vitest/eslint-plugin": "1.3.9",
     "@vitest/ui": "^3.2.4",
@@ -60,7 +59,6 @@
     "@opentelemetry/sdk-node": "0.205.0",
     "@opentelemetry/semantic-conventions": "1.37.0",
     "@t3-oss/env-core": "0.13.8",
-    "bcrypt": "6.0.0",
     "better-auth": "1.3.9",
     "commander": "14.0.0",
     "eslint-plugin-unicorn": "61.0.2",
