--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "tsx --env-file .env --watch src/server.ts | pino-pretty",
-    "start": "node --env-file .env ./dist/server.js",
-    "start:otel": "node --env-file .env --import ./dist/otel.js ./dist/server.js",
+    "dev": "tsx --watch src/server.ts | pino-pretty",
+    "start": "node ./dist/server.js",
+    "start:otel": "node --import ./dist/otel.js ./dist/server.js",
     "build": "rimraf dist && tsc && tsc-alias",
-    "test": "dotenvx run -f .env.test -q -- vitest run --reporter=verbose",
+    "test": "vitest run --reporter=verbose",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "format:all": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|jsx|tsx)\"",
