--- a/.env.test
+++ b/.env.test
@@ -5,7 +5,7 @@ APP_NAME=MyApp
 APP_DEBUG=true
 APP_URL=http://localhost
 FRONTEND_URL=http://localhost:3000
-DATABASE_URL=postgres://postgres:password@localhost:5432/postgres
+DATABASE_URL=postgres://postgres:password@localhost:5432/postgres_test
 
 BETTER_AUTH_SECRET=x7N0MKptndXrkWRMdfOrrQOg6SWaTkFp
 BETTER_AUTH_URL=http://localhost:4000
