--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "tsx --watch src/server.ts | pino-pretty",
+    "dev:email": "email  dev --dir ./src/emails",
     "start": "node ./dist/server.js",
     "start:otel": "node --import ./dist/otel.js ./dist/server.js",
     "build": "rimraf dist && tsc && tsc-alias",
@@ -23,13 +24,16 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "9.35.0",
+    "@react-email/preview-server": "^4.2.11",
     "@types/node": "24.3.1",
+    "@types/nodemailer": "^7.0.1",
     "@vitest/eslint-plugin": "1.3.9",
     "@vitest/ui": "^3.2.4",
     "eslint-config-prettier": "10.1.8",
     "kysely-codegen": "0.19.0",
     "kysely-ctl": "0.19.0",
     "prettier": "3.6.2",
+    "react-email": "4.2.11",
     "rimraf": "6.0.1",
     "testcontainers": "11.5.1",
     "tsc-alias": "1.8.16",
@@ -58,6 +62,7 @@
     "@opentelemetry/sdk-metrics": "2.1.0",
     "@opentelemetry/sdk-node": "0.205.0",
     "@opentelemetry/semantic-conventions": "1.37.0",
+    "@react-email/components": "0.5.3",
     "@t3-oss/env-core": "0.13.8",
     "better-auth": "1.3.9",
     "commander": "14.0.0",
@@ -65,10 +70,13 @@
     "hono": "4.9.6",
     "kysely": "0.28.5",
     "mysql2": "3.14.5",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pg-boss": "^10.3.3",
     "pino": "9.9.5",
     "pino-pretty": "13.1.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "tiny-invariant": "1.3.3",
     "tsx": "4.20.5",
     "winston": "3.17.0",
