--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyApp",
+  "name": "my-app",
   "type": "module",
   "version": "1.0.0",
   "description": "",
@@ -23,11 +23,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "9.35.0",
+    "@eslint/js": "9.36.0",
     "@react-email/preview-server": "^4.2.11",
-    "@types/node": "24.3.1",
+    "@types/node": "24.5.2",
     "@types/nodemailer": "^7.0.1",
-    "@vitest/eslint-plugin": "1.3.9",
+    "@vitest/eslint-plugin": "1.3.12",
     "@vitest/ui": "^3.2.4",
     "eslint-config-prettier": "10.1.8",
     "kysely-codegen": "0.19.0",
@@ -35,26 +35,26 @@
     "prettier": "3.6.2",
     "react-email": "4.2.11",
     "rimraf": "6.0.1",
-    "testcontainers": "11.5.1",
+    "testcontainers": "11.6.0",
     "tsc-alias": "1.8.16",
     "typescript": "5.9.2",
-    "typescript-eslint": "8.43.0",
+    "typescript-eslint": "8.44.0",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.4"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "1.49.0",
+    "@dotenvx/dotenvx": "1.50.1",
     "@faker-js/faker": "10.0.0",
-    "@hono/node-server": "1.19.2",
+    "@hono/node-server": "1.19.3",
     "@hono/otel": "0.5.0",
-    "@hono/zod-validator": "0.7.2",
+    "@hono/zod-validator": "0.7.3",
     "@opentelemetry/api": "1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "0.64.0",
+    "@opentelemetry/auto-instrumentations-node": "0.64.1",
     "@opentelemetry/exporter-logs-otlp-http": "0.205.0",
     "@opentelemetry/exporter-metrics-otlp-http": "0.205.0",
     "@opentelemetry/exporter-trace-otlp-http": "0.205.0",
     "@opentelemetry/instrumentation-http": "0.205.0",
-    "@opentelemetry/instrumentation-mysql2": "0.52.0",
+    "@opentelemetry/instrumentation-pg": "^0.58.0",
     "@opentelemetry/instrumentation-pino": "0.52.0",
     "@opentelemetry/instrumentation-winston": "0.50.0",
     "@opentelemetry/resources": "2.1.0",
@@ -64,22 +64,22 @@
     "@opentelemetry/semantic-conventions": "1.37.0",
     "@react-email/components": "0.5.3",
     "@t3-oss/env-core": "0.13.8",
-    "better-auth": "1.3.9",
-    "commander": "14.0.0",
+    "bentocache": "^1.5.0",
+    "better-auth": "1.3.13",
+    "commander": "14.0.1",
     "eslint-plugin-unicorn": "61.0.2",
-    "hono": "4.9.6",
-    "kysely": "0.28.5",
-    "mysql2": "3.14.5",
+    "hono": "4.9.8",
+    "kysely": "0.28.7",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pg-boss": "^10.3.3",
-    "pino": "9.9.5",
+    "pino": "9.11.0",
     "pino-pretty": "13.1.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "tiny-invariant": "1.3.3",
     "tsx": "4.20.5",
     "winston": "3.17.0",
-    "zod": "4.1.5"
+    "zod": "4.1.9"
   }
 }
