--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "tsx --watch src/server.ts | pino-pretty",
-    "dev:email": "email  dev --dir ./src/emails",
+    "dev:email": "email dev --dir ./src/emails",
     "start": "node ./dist/server.js",
     "start:otel": "node --import ./dist/otel.js ./dist/server.js",
     "build": "rimraf dist && tsc && tsc-alias",
@@ -64,6 +64,7 @@
     "@opentelemetry/semantic-conventions": "1.37.0",
     "@react-email/components": "0.5.3",
     "@t3-oss/env-core": "0.13.8",
+    "@types/pg": "^8.15.5",
     "bentocache": "^1.5.0",
     "better-auth": "1.3.13",
     "commander": "14.0.1",
