--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "format:check": "prettier --ignore-path .gitignore --check \"**/*.+(js|ts|jsx|tsx)\"",
     "db:migrate": "kysely migrate:latest",
     "db:migrate:auth": "npx @better-auth/cli migrate",
-    "db:codegen": "kysely-codegen --dialect postgres --out-file ./src/lib/db/types.ts"
+    "db:codegen": "kysely-codegen --dialect postgres --out-file ./src/lib/db/types.ts --default-schema=public",
+    "knip": "knip"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "@vitest/eslint-plugin": "1.3.12",
     "@vitest/ui": "^3.2.4",
     "eslint-config-prettier": "10.1.8",
+    "knip": "^5.63.1",
     "kysely-codegen": "0.19.0",
     "kysely-ctl": "0.19.0",
     "prettier": "3.6.2",
@@ -76,6 +78,7 @@
     "pg-boss": "^10.3.3",
     "pino": "9.11.0",
     "pino-pretty": "13.1.1",
+    "postgres-interval": "^4.0.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "tiny-invariant": "1.3.3",
