--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "commander": "14.0.1",
     "eslint-plugin-unicorn": "61.0.2",
     "hono": "4.9.8",
+    "import-in-the-middle": "^1.14.2",
+    "ioredis": "^5.7.0",
     "kysely": "0.28.7",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
