--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "9.36.0",
     "@react-email/preview-server": "^4.2.11",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "24.5.2",
     "@types/nodemailer": "^7.0.1",
     "@vitest/eslint-plugin": "1.3.12",
@@ -45,8 +46,12 @@
     "vitest": "3.2.4"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.896.0",
     "@dotenvx/dotenvx": "1.50.1",
     "@faker-js/faker": "10.0.0",
+    "@flystorage/aws-s3": "^1.2.0",
+    "@flystorage/file-storage": "^1.2.0",
+    "@flystorage/local-fs": "^1.2.0",
     "@hono/node-server": "1.19.3",
     "@hono/otel": "0.5.0",
     "@hono/zod-validator": "0.7.3",
@@ -75,6 +80,7 @@
     "import-in-the-middle": "^1.14.2",
     "ioredis": "^5.7.0",
     "kysely": "0.28.7",
+    "mime-types": "^3.0.1",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pg-boss": "^10.3.3",
