--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,66 @@
-.tap
+# Dependencies
+node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build output (will be generated in container)
 dist
+
+# Environment files
 .env
+.env.*
 .env.example
+
+# Git
+.git
+.gitignore
+.gitattributes
+
+# Docker files
 docker-compose.yml
+docker-compose.*.yml
+Dockerfile
+.dockerignore
+
+# Scripts
 init.sh
 run.sh
+
+# Storage (will be mounted as volume)
 storage
+
+# Documentation
 README.md
-node_modules
-.git
+*.md
+LICENSE
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*.swn
+.DS_Store
+
+# Testing
+coverage
+.tap
+*.test.ts
+*.test.js
+*.spec.ts
+*.spec.js
+tests
+vitest.config.ts
+
+# CI/CD
+.github
+.gitlab-ci.yml
+
+# Logs
+logs
+*.log
+
+# OpenTelemetry
+otel-collector-config.yaml
