--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,72 +1,34 @@
 version: "3"
 services:
-  app-node-ts:
-    container_name: app-node-ts
+  app:
     restart: always
     build: ./
     env_file:
       - .env
     ports:
-      - 7900:4000
+      - 4000:4000
     volumes:
-      - app-storage:/app/storage
+      - app-data:/app/storage
     depends_on:
-      - rabbitmq
       - redis
-      - mysql
-      - otel-collector
-
-  forgot-password-worker:
-    build: ./
-    command: npm run user:worker:forgot-password
-    restart: always
-    env_file:
-      - .env
-    depends_on:
-      - rabbitmq
-      - redis
-      - mysql
-      - otel-collector
-
-  otel-collector:
-    image: otel/opentelemetry-collector-contrib:latest
-    container_name: otel-collector
-    restart: always
-    command: ["--config=/etc/otel-collector-config.yaml"]
-    volumes:
-      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml:ro
-    ports:
-      - "4317:4317"   # OTLP gRPC receiver
-      - "4318:4318"   # OTLP HTTP receiver
-    environment:
-      - SIGNOZ_OTLP_ENDPOINT=${SIGNOZ_OTLP_ENDPOINT:-http://signoz:4317}
-      - SIGNOZ_ACCESS_TOKEN=${SIGNOZ_ACCESS_TOKEN:-}
-      - SIGNOZ_INSECURE=${SIGNOZ_INSECURE:-true}
+      - postgres
 
   redis:
     image: redis:7.2.5
     restart: always
 
-  rabbitmq:
-    image: rabbitmq:3-management
-    restart: always
+  postgres:
+    image: postgres:17
+    restart: unless-stopped
     environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
-
-  mysql:
-    image: mysql:8.0-debian
-    restart: always
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: postgres
     ports:
-      - 3306:3308
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: testdb
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      - "5432:5432"
     volumes:
-      - mysqldata:/var/lib/mysql
+      - pgdata:/var/lib/postgresql/data
 
 volumes:
-  mysqldata:
-  app-storage:
+  pgdata:
+  app-data:
