--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -11,59 +11,110 @@ processors:
     timeout: 1s
     send_batch_size: 1024
     send_batch_max_size: 2048
-
-  resource:
-    attributes:
-      - key: service.name
-        from_attribute: service.name
-        action: upsert
-      - key: service.version
-        from_attribute: service.version
-        action: upsert
+    # https://github.com/open-telemetry/opentelemetry-collector/tree/main/processor/batchprocessor
+  resourcedetection:
+    # Enriches telemetry data with resource information from the host
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/resourcedetectionprocessor
+    detectors: ["env", "docker", "system"]
+    override: false
+  transform/drop_unneeded_resource_attributes:
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/transformprocessor
+    error_mode: ignore
+    trace_statements:
+      - context: resource
+        statements:
+          - delete_key(attributes, "k8s.pod.start_time")
+          - delete_key(attributes, "os.description")
+          - delete_key(attributes, "os.type")
+          - delete_key(attributes, "process.command_args")
+          - delete_key(attributes, "process.executable.path")
+          - delete_key(attributes, "process.pid")
+          - delete_key(attributes, "process.runtime.description")
+          - delete_key(attributes, "process.runtime.name")
+          - delete_key(attributes, "process.runtime.version")
+    metric_statements:
+      - context: resource
+        statements:
+          - delete_key(attributes, "k8s.pod.start_time")
+          - delete_key(attributes, "os.description")
+          - delete_key(attributes, "os.type")
+          - delete_key(attributes, "process.command_args")
+          - delete_key(attributes, "process.executable.path")
+          - delete_key(attributes, "process.pid")
+          - delete_key(attributes, "process.runtime.description")
+          - delete_key(attributes, "process.runtime.name")
+          - delete_key(attributes, "process.runtime.version")
+    log_statements:
+      - context: resource
+        statements:
+          - delete_key(attributes, "k8s.pod.start_time")
+          - delete_key(attributes, "os.description")
+          - delete_key(attributes, "os.type")
+          - delete_key(attributes, "process.command_args")
+          - delete_key(attributes, "process.executable.path")
+          - delete_key(attributes, "process.pid")
+          - delete_key(attributes, "process.runtime.description")
+          - delete_key(attributes, "process.runtime.name")
+          - delete_key(attributes, "process.runtime.version")
+  transform/add_resource_attributes_as_metric_attributes:
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/transformprocessor
+    error_mode: ignore
+    metric_statements:
+      - context: datapoint
+        statements:
+          - set(attributes["deployment.environment"], resource.attributes["deployment.environment"])
+          - set(attributes["service.version"], resource.attributes["service.version"])
 
 exporters:
-  # SigNoz OTLP exporters
-  otlp/signoz-traces:
-    endpoint: ${SIGNOZ_OTLP_ENDPOINT}
-    tls:
-      insecure: ${SIGNOZ_INSECURE}
-    headers:
-      signoz-access-token: ${SIGNOZ_ACCESS_TOKEN}
+  otlphttp/grafana_cloud:
+    # https://github.com/open-telemetry/opentelemetry-collector/tree/main/exporter/otlphttpexporter
+    endpoint: "${env:GRAFANA_CLOUD_OTLP_ENDPOINT}"
+    auth:
+      authenticator: basicauth/grafana_cloud
 
-  otlp/signoz-metrics:
-    endpoint: ${SIGNOZ_OTLP_ENDPOINT}
-    tls:
-      insecure: ${SIGNOZ_INSECURE}
-    headers:
-      signoz-access-token: ${SIGNOZ_ACCESS_TOKEN}
+extensions:
+  basicauth/grafana_cloud:
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/extension/basicauthextension
+    client_auth:
+      username: "${env:GRAFANA_CLOUD_INSTANCE_ID}"
+      password: "${env:GRAFANA_CLOUD_API_KEY}"
 
-  otlp/signoz-logs:
-    endpoint: ${SIGNOZ_OTLP_ENDPOINT}
-    tls:
-      insecure: ${SIGNOZ_INSECURE}
-    headers:
-      signoz-access-token: ${SIGNOZ_ACCESS_TOKEN}
-
-
-  # Optional: logging exporter for debugging
-  logging:
-    loglevel: info
+connectors:
+  grafanacloud:
+    # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/connector/grafanacloudconnector
+    host_identifiers: ["host.name"]
 
 service:
+  extensions:
+    [
+      basicauth/grafana_cloud,
+    ]
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [batch, resource]
-      exporters: [otlp/signoz-traces, otlp/grafana-traces]
-
+      processors:
+        [resourcedetection, transform/drop_unneeded_resource_attributes, batch]
+      exporters: [otlphttp/grafana_cloud, grafanacloud]
     metrics:
       receivers: [otlp]
-      processors: [batch, resource]
-      exporters: [otlp/signoz-metrics, prometheusremotewrite/grafana]
-
+      processors:
+        [
+          resourcedetection,
+          transform/drop_unneeded_resource_attributes,
+          transform/add_resource_attributes_as_metric_attributes,
+          batch,
+        ]
+      exporters: [otlphttp/grafana_cloud]
+    metrics/grafanacloud:
+      receivers: [grafanacloud]
+      processors: [batch]
+      exporters: [otlphttp/grafana_cloud]
     logs:
       receivers: [otlp]
-      processors: [batch, resource]
-      exporters: [otlp/signoz-logs, loki/grafana]
-
-  extensions: []
+      processors:
+        [
+          resourcedetection,
+          transform/drop_unneeded_resource_attributes,
+          batch,
+        ]
+      exporters: [otlphttp/grafana_cloud]
