--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "noImplicitAny": false,
 
     /* Directory */
-    "outDir": "dist",
+    "outDir": "build",
     "rootDir": "./src",
     "baseUrl": "./src",
     "paths": {
