--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "bentocache": "^1.5.0",
     "better-auth": "1.3.27",
     "commander": "14.0.1",
+    "es-toolkit": "^1.40.0",
     "eslint-plugin-unicorn": "61.0.2",
     "hono": "4.9.10",
     "import-in-the-middle": "^1.14.4",
